--- a/Apteka.Win/App.config
+++ b/Apteka.Win/App.config
@@ -19,7 +19,7 @@
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=Apteka.mdb;Mode=Share Deny None;"/>
     <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=DNIKIFOROV3\SQLEXPRESS;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
     -->
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=DNIKIFOROV3\SQLEXPRESS;Initial Catalog=Apteka" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.diagnostics>
     <switches>
