--- a/Apteka.Module.Win/Apteka.Module.Win.csproj
+++ b/Apteka.Module.Win/Apteka.Module.Win.csproj
@@ -209,6 +209,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CustomWinWindowTemplateController.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controllers\WinIxportInvoiceController.cs">
       <SubType>Component</SubType>
     </Compile>
