--- a/Apteka.Module/Apteka.Module.csproj
+++ b/Apteka.Module/Apteka.Module.csproj
@@ -221,6 +221,18 @@
     <Compile Include="Migrations\201906111659459_DosageForm300.Designer.cs">
       <DependentUpon>201906111659459_DosageForm300.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906121404323_MergeDosageFormPrice.cs" />
+    <Compile Include="Migrations\201906121404323_MergeDosageFormPrice.Designer.cs">
+      <DependentUpon>201906121404323_MergeDosageFormPrice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906121415396_PriceLimitOptional.cs" />
+    <Compile Include="Migrations\201906121415396_PriceLimitOptional.Designer.cs">
+      <DependentUpon>201906121415396_PriceLimitOptional.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906121721546_DosageAltMeasure.cs" />
+    <Compile Include="Migrations\201906121721546_DosageAltMeasure.Designer.cs">
+      <DependentUpon>201906121721546_DosageAltMeasure.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelExtensions\ModelClassUpdater.cs" />
     <Compile Include="ModelExtensions\ModelMemberUpdater.cs" />
     <Compile Include="ModelExtensions\DetailViewLayoutGeneratorUpdater.cs" />
@@ -293,6 +305,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906111659459_DosageForm300.resx">
       <DependentUpon>201906111659459_DosageForm300.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906121404323_MergeDosageFormPrice.resx">
+      <DependentUpon>201906121404323_MergeDosageFormPrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906121415396_PriceLimitOptional.resx">
+      <DependentUpon>201906121415396_PriceLimitOptional.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906121721546_DosageAltMeasure.resx">
+      <DependentUpon>201906121721546_DosageAltMeasure.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
     <EmbeddedResource Include="Module.resx">
